--- a/App/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/App/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -6,7 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,16 +22,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon" translatesAutoresizingMaskIntoConstraints="NO" id="qdw-gc-949">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="qdw-gc-949">
+                                <rect key="frame" x="127.5" y="195" width="120" height="110"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qdw-gc-949" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="0cK-Z9-Gr0"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="qdw-gc-949" secondAttribute="bottom" id="COQ-fB-pl9"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="qdw-gc-949" secondAttribute="trailing" id="pre-Lm-jAp"/>
-                            <constraint firstItem="qdw-gc-949" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="uPE-Eo-5Lc"/>
+                            <constraint firstItem="qdw-gc-949" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.75" id="6nN-43-hYf"/>
+                            <constraint firstItem="qdw-gc-949" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pST-SP-FcI"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -41,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="AppIcon" width="120" height="120"/>
+        <image name="LaunchScreenImage" width="120" height="110"/>
     </resources>
 </document>
